símbolos e emojis no html

--- a/modulo1/ex002/index.html
+++ b/modulo1/ex002/index.html
@@ -14,5 +14,15 @@
 			<br />
 			Basta colocar tudo no meio de par de tags p e /p
 		</p>
+
+		<!-- &lt; significa LESS THAN / &gt; significa GREATER THAN -->
+		<p>Quebras de linhas podem ser colocadas usando a tag &lt;br&gt;</p>
+		<p>
+			Símbolos especiais: &reg; &copy; &trade; &euro; &pound; &cent; &Delta;
+			&uparrow;
+		</p>
+		<p>Vamos adicionar alguns emojis:</p>
+		<!-- É possível colar os emojis direto no código, porém para garantir que todos browsers suportaram, usando hexadecimal é mais seguro -->
+		<p>Emoji usando hexadecimal &#x1F596 &#x1F913</p>
 	</body>
 </html>
